<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MHO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="repassword">Nhập lại mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="pmail">Email người giới thiệu</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="maihoang">MAI HOÀNG ONLINE</string>
    <string name="greeting">Xin chào</string>
    <string name="default_rate">(2520)</string>
    <string name="description">MÔ TẢ</string>
    <string name="app_id">539331289516926</string>
    <string name="top_game">TOP GAME</string>
    <string name="top_app">TOP APP</string>
    <string name="pay_gold">Nạp tiền</string>
    <string name="serial">Số serial</string>
    <string name="code">Mã thẻ cào</string>
    <string name="transfer_gold">Chuyển tiền</string>
    <string name="to_user">Id hoặc Email người nhận</string>
    <string name="account_info">Thông tin tài khoản</string>
    <string name="gold_transfer">Số lượng gold</string>
    <string name="show_pass_wifi">PASS TRUY CẬP WIFI</string>
    <string name="close">Close</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_new_password">Nhập lại mật khẩu mới</string>

</resources>