<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350sp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_login_style"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/pay_gold"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/blue" />
    </LinearLayout>

    <Spinner
        android:id="@+id/card_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/edittext_login_style"
        android:paddingBottom="5sp"
        android:paddingTop="5sp" />
    
    <EditText
        android:id="@+id/card_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/edittext_login_style"
        android:hint="@string/code"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:textColorHint="@color/gray" />
    
    <EditText
        android:id="@+id/card_serial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/edittext_login_style"
        android:hint="@string/serial"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        android:textColorHint="@color/gray" />
    
    <Button
        android:id="@+id/pay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@drawable/edittext_login_style"
        android:text="@string/pay_gold"
        android:textColor="@color/black" />

</LinearLayout>